<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:divider="@color/colorPrimaryDark"
    android:dividerHeight="10sp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingBottom="2dp"
        android:background="@drawable/textlines"
        >

        <TextView
            android:id="@+id/category_item"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_category"
            android:ellipsize="end"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:id="@+id/date_item"
            android:text="@string/no_date"
            android:layout_alignParentRight="true" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_no_avaible"
        android:textAlignment="center"
        android:ellipsize="end"
        android:maxLines="2"
        android:textColor="@color/primaryTextColor"
        />

</LinearLayout>